Fix refresh button alignment

--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ ul {
 }
 
 h3 {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   font-size: 25px;
 }
 
@@ -75,6 +75,7 @@ li:nth-child(odd) {
 button {
   background-color: darkcyan;
   color: inherit;
+  margin-bottom: 10px;
 }
 
 .form-submit {
